Remove width:100% from global dropdown-menu to fix ExportMenu truncation

--- a/website/src/styles/bootstrap/style-override.scss
+++ b/website/src/styles/bootstrap/style-override.scss
@@ -12,7 +12,6 @@ mark {
 
 // Dropdown menu
 .dropdown-menu {
-  width: 100%;
   color: var(--body-color);
   box-shadow: 0 2px 6px rgba(#000, 0.25);
 
