--- a/website/src/views/components/module-info/AddModuleDropdown.scss
+++ b/website/src/views/components/module-info/AddModuleDropdown.scss
@@ -20,16 +20,20 @@
   }
 }
 
-.dropdownItemContents {
+.dropdownMenu {
   width: 100%;
-  text-align: center;
-  white-space: normal;
 
-  br {
-    display: none;
-  }
+  .dropdownItemContents {
+    width: 100%;
+    text-align: center;
+    white-space: normal;
 
-  strong {
-    font-size: 1em;
+    br {
+      display: none;
+    }
+
+    strong {
+      font-size: 1em;
+    }
   }
 }
