--- a/website/src/views/timetable/ExportMenu.scss
+++ b/website/src/views/timetable/ExportMenu.scss
@@ -12,12 +12,6 @@
   }
 
   .dropdownMenu {
-    width: 16rem;
-
-    @include media-breakpoint-down(xs) {
-      width: auto;
-    }
-
     @include media-breakpoint-up(md) {
       font-size: $font-size-sm;
     }
